feat(Requests): convert HasMany to HasOne

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   </head>
 
   <body>
-      <%= link_to 'Cliente', users_backoffice_welcome_index_path %>
+      <%= link_to 'Home', welcome_index_path %>
+      <%= link_to 'Cliente', requests_path %>
       <%= link_to 'Advogado', lawyers_backoffice_welcome_index_path %>
     <%= yield %>
   </body>
