--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -13,16 +13,14 @@
   </thead>
 
   <tbody>
-    <% @requests.each do |request| %>
       <tr>
-        <td><%= request.title %></td>
-        <td><%= request.description %></td>
-        <td><%= request.user.email %></td>
-        <td><%= link_to 'Show', request %></td>
-        <td><%= link_to 'Edit', edit_request_path(request) %></td>
-        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= @request.title %></td>
+        <td><%= @request.description %></td>
+        <td><%= @request.user.email %></td>
+        <td><%= link_to 'Show', @request %></td>
+        <td><%= link_to 'Edit', edit_request_path(@request) %></td>
+        <td><%= link_to 'Destroy', @request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
   </tbody>
 </table>
 
