--- a/app/views/lawyers_request/my_list.html.erb
+++ b/app/views/lawyers_request/my_list.html.erb
@@ -3,4 +3,6 @@
 <% @users.each do |user| %>
   <%=  user.request.title %>
   <%=  user.email %>
+  <%= link_to "Profile", finished_path(id: user), method: :post %>
+  <br>
 <% end %>
