--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,138 @@
  *= require_tree .
  *= require_self
  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background: #f39;
+  font-family: Helvetica, Arial, sans-serif;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-soothing: antialiased !important;
+}
+
+input,
+button {
+  outline: 0;
+}
+
+.content {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+header#main-header {
+  height: 46px;
+  background-color: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  position: relative;
+  z-index: 1;
+}
+
+header#main-header .content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+header#main-header img {
+  width: 60px;
+  height: 60px;
+}
+
+header#main-header nav ul {
+  display: flex;
+  list-style: none;
+}
+
+header#main-header nav ul li {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  font-weight: bold;
+  margin-left: 30px;
+  color: #667580;
+}
+
+header#main-header nav ul li:first-child {
+  margin-left: 0px;
+}
+a {
+  color: #f39;
+  text-decoration: none;
+}
+
+.btn a {
+  height: 34px;
+
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 120px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #fff;
+
+  border: 0;
+  border-radius: 16px;
+}
+
+.btn-pink a {
+  background-color: #f39;
+  color: #fff !important;
+}
+
+.btn-white a {
+  background-color: white;
+  color: #f39 !important;
+}
+
+div.user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 100%; */
+  margin-top: 100px;
+}
+div.user .user-content {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 500px;
+  max-height: 500px;
+  background-color: #fff;
+}
+
+.field input {
+  width: 220px;
+  border: 1px solid #e5ecf0;
+  height: 34px;
+  padding: 0 12px 0 12px;
+  border-radius: 16px;
+  font-size: 12px;
+  color: #667580;
+  font-weight: bold;
+  background-size: 20px 20px;
+}
+
+.field-pink,
+.field-pink input {
+  background-color: #f39 !important;
+  color: #fff !important;
+  border-radius: 16px;
+}
+
+.check_box {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
