--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,6 +25,9 @@ body {
   text-rendering: optimizeLegibility !important;
   -webkit-font-soothing: antialiased !important;
 }
+.body_application {
+  background: #f39;
+}
 
 input,
 button {
@@ -106,20 +109,24 @@ a {
   color: #f39 !important;
 }
 
-div.user {
+div.userss {
   display: flex;
   align-items: center;
   justify-content: center;
   /* height: 100%; */
-  margin-top: 100px;
+  margin-top: 30px;
 }
-div.user .user-content {
+div.userss .type {
+  color: #ccc;
+  margin: 5px 0;
+}
+div.userss .user-content {
   padding: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 500px;
+  max-width: 300px;
   max-height: 500px;
   background-color: #fff;
 }
@@ -134,6 +141,7 @@ div.user .user-content {
   color: #667580;
   font-weight: bold;
   background-size: 20px 20px;
+  cursor: pointer;
 }
 
 .field-pink,
@@ -147,4 +155,10 @@ div.user .user-content {
   display: flex;
   align-items: center;
   margin-top: 10px;
+}
+
+@media all and (max-width: 600px) {
+  header#main-header nav {
+    display: none;
+  }
 }
