--- a/app/views/lawyers/registrations/new.html.erb
+++ b/app/views/lawyers/registrations/new.html.erb
@@ -1,4 +1,7 @@
-<h2>Sign up</h2>
+
+ <div class="userss">
+  <div class="user-content">
+<h2>Inscrever-se</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -11,7 +14,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> caracteres mínimos)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
@@ -26,9 +29,13 @@
     <%= f.select("brazilian_state_id",  @brazilian_states_options, {include_blank: false} )%>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="field field-pink actions">
+    <%= f.submit "Inscrever-se" %>
   </div>
-<% end %>
 
-<%= render "lawyers/shared/links" %>
+<% end %>
+<%= render "users/shared/links" %>
+
+
+  </div>
+</div>
