--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Request</h1>
+<div class="content-user">
+
+<%# <p id="notice"><%= notice </p>%>
+
+<h1 class="title" >Pedido de Indenização <%= link_to 'Voltar', requests_path %></h1>
 
 <%= render 'form', request: @request %>
 
-<%= link_to 'Back', requests_path %>
+</div>
