--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,4 +1,7 @@
-<h2>Forgot your password?</h2>
+
+<div class="userss">
+  <div class="user-content">
+<h2>Esqueceu a senha?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -8,9 +11,11 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="field field-pink actions">
+    <%= f.submit "Me envie as instruções" %>
   </div>
 <% end %>
 
 <%= render "users/shared/links" %>
+  </div>
+</div>
