--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 
-<div class="user">
+ <div class="userss">
   <div class="user-content">
-<h2>Sign up</h2>
+<h2>Inscrever-se</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -29,15 +29,13 @@
     <%= f.select("brazilian_state_id",  @brazilian_states_options, {include_blank: false} )%>
   </div>
 
-
- </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="field field-pink actions">
+    <%= f.submit "Inscrever-se" %>
   </div>
-<% end %>
 
+<% end %>
 <%= render "users/shared/links" %>
 
-</div>
+
   </div>
+</div>
