--- a/app/views/requests/_status.html.erb
+++ b/app/views/requests/_status.html.erb
@@ -1,4 +1,4 @@
-<p class="status status-<%=request.status%> ">  <strong>status</strong>
+<p class=" status-<%=request.status%> "> 
   <%= request.open? ? 'Aberto': '' %> 
   <%= request.pending? ? 'Esperando': '' %> 
   <%= request.finished? ? 'Finalizado': '' %> 
