fix(status): refactor

--- a/app/views/requests/_status.html.erb
+++ b/app/views/requests/_status.html.erb
@@ -1,5 +1,5 @@
 <p class=" status-<%=request.status%> "> 
-  <%= request.open? ? 'Aberto': '' %> 
-  <%= request.pending? ? 'Esperando': '' %> 
-  <%= request.finished? ? 'Finalizado': '' %> 
+  <%= 'Aberto' if request.open? %> 
+  <%= 'Esperando' if request.pending? %> 
+  <%= 'Finalizado' if request.finished? %> 
 </p>
