--- a/app/views/lawyers_request/_status.html.erb
+++ b/app/views/lawyers_request/_status.html.erb
@@ -1,5 +1,5 @@
 <p class="status status-<%=request.status%> ">  <strong>status</strong>
-  <%= request.open? ? 'Aberto': '' %> 
-  <%= request.pending? ? 'Esperando': '' %> 
-  <%= request.finished? ? 'Finalizado': '' %> 
+  <%= 'Aberto' if request.open? %> 
+  <%= 'Esperando' if request.pending? %> 
+  <%= 'Finalizado' if request.finished? %> 
 </p>
